--- a/miniprojet/assets/styles/css/style.css
+++ b/miniprojet/assets/styles/css/style.css
@@ -108,8 +108,68 @@ html body main #left h3 {
   width: 100%;
 }
 html body main #right {
-  width: 50%;
+  width: 100%;
   height: 100%;
+  display: grid;
+}
+html body main #right > article {
+  background-color: rgba(0, 0, 0, 0.3);
+  align-self: center;
+  margin-left: 3vw;
+  width: 50%;
+  padding: 1vh 2vw;
+  border-radius: 8px;
+}
+html body main #right > article > header > * {
+  line-height: 6vh;
+}
+html body main #right > article > header {
+  border-bottom: 1px solid #56CFE0;
+  display: grid;
+  grid-template-columns: 1fr 0.4fr;
+}
+html body main #right > article > header h4 {
+  color: #7500B8;
+  font-size: 1.2em;
+  grid-column: 1/2;
+}
+html body main #right > article > header h5 {
+  color: #56CFE0;
+  font-size: 1.4em;
+  grid-column: 1/2;
+}
+html body main #right > article > header > img {
+  max-height: 4rem;
+  grid-column: 2/3;
+  grid-row: 1/3;
+  align-self: center;
+  justify-self: center;
+}
+html body main #right > article #list {
+  padding: 2vh 0.6vw;
+}
+html body main #right > article #list > ul > li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1vh 0vw;
+}
+html body main #right > article #list > ul > li:not(:first-of-type) > img {
+  max-height: 2rem;
+  padding-right: 1vw;
+}
+html body main #right > article #list > ul > li:not(:first-of-type) {
+  color: #91A5D6;
+}
+html body main #right > article #list > ul > li:not(:last-of-type) {
+  border-bottom: 1px solid #006366;
+}
+html body main #right > article #list > ul > li:first-of-type {
+  font-size: 1.2em;
+  padding: 0vh 0vw 1vh 0vw;
+}
+html body main #right > article #list > ul > li:first-of-type > img {
+  max-height: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
