--- a/miniprojet/assets/styles/sass/style.scss
+++ b/miniprojet/assets/styles/sass/style.scss
@@ -67,8 +67,88 @@ html {
         }
 
         #right {
-            width:50%;
+            width:100%;
             height:100%;
+            display:grid;
+
+            & > article {
+                background-color:rgba(0, 0, 0, 0.3);
+                align-self:center;
+                margin-left:3vw;
+                width:50%;
+                padding:1vh 2vw;
+                border-radius:8px;
+
+                & > header > * {
+                    line-height:6vh;
+                }
+
+                & > header {
+                    border-bottom: 1px solid #56CFE0;
+                    display:grid;
+                    grid-template-columns: 1fr 0.4fr;
+
+
+                    h4 {
+                        color:#7500B8;
+                        font-size:1.2em;
+                        grid-column:1/2;
+                    }
+
+                    h5 {
+                        color:#56CFE0;
+                        font-size:1.4em;
+                        grid-column:1/2;
+                    }
+
+                    & > img {
+                        max-height:4rem;
+                        grid-column:2/3;
+                        grid-row:1/3;
+                        align-self:center;
+                        justify-self:center;
+
+                    }
+                }
+                #list {
+                    padding: 2vh 0.6vw;
+
+                    & > ul {
+
+                        & > li {
+                            display:flex;
+                            flex-direction:row;
+                            align-items:center;
+                            padding: 1vh 0vw;
+
+
+                        &:not(:first-of-type) > img {
+                            max-height: 2rem;
+                            padding-right:1vw;
+                            }
+                        }
+
+                        & > li:not(:first-of-type) {
+                            color:#91A5D6;
+                        }
+
+                        & > li:not(:last-of-type) {
+                            border-bottom: 1px solid #006366 ;
+                        }
+
+                        & > li:first-of-type {
+                            font-size:1.2em;
+                            padding: 0vh 0vw 1vh 0vw;
+
+                            & > img {
+                                max-height:2rem;
+                            }
+                        }
+
+                        }
+                }
+
+            }
         }
     }
   }
