--- a/miniprojet2/assets/styles/css/style.css
+++ b/miniprojet2/assets/styles/css/style.css
@@ -80,5 +80,88 @@ html body > header nav ul li {
   margin: 0vh 5vw;
   font-weight: bold;
 }
+html body main {
+  display: grid;
+  grid-template-rows: 0.3fr 1fr;
+  padding-top: 5vh;
+}
+html body main h2 {
+  font-size: 2.3em;
+  align-self: center;
+  justify-self: center;
+  font-weight: 700;
+  padding: 1vh 0vw 6vh 0vw;
+}
+html body main #formule {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 65vw;
+  align-self: center;
+  justify-self: center;
+}
+html body main #formule > article:not(:nth-of-type(2)) {
+  margin-top: 6vh;
+}
+html body main #formule > article {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+html body main #formule > article > header {
+  height: 6vh;
+  display: grid;
+  background-color: #56CFE0;
+}
+html body main #formule > article > header > h3 {
+  align-self: center;
+  justify-self: center;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+html body main #formule > article:not(:nth-of-type(2)) > header {
+  background-color: #5E60CE;
+}
+html body main #formule > article > .border {
+  height: 100%;
+  border-left: 0.6px solid #56CFE0;
+  border-right: 0.6px solid #56CFE0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+html body main #formule > article > .border-2 {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+html body main #formule > article > section > section {
+  color: black;
+  font-size: 0.8em;
+  height: 80%;
+}
+html body main #formule > article > section > section > ul {
+  padding-left: 0.7vw;
+}
+html body main #formule > article > section > section > ul > li {
+  padding: 1vh 0vw 4vh 0vw;
+}
+html body main #formule > article > section > footer {
+  color: #5E60CE;
+  font-size: 0.9em;
+  text-align: center;
+  font-weight: bold;
+  padding: 1vh 0 1vh 0;
+  border-bottom: 0.6px solid #56CFE0;
+}
+html body main #formule > article > section > footer > p {
+  justify-self: center;
+  align-self: end;
+}
+html body main #formule > article:nth-of-type(2) > section > footer > p {
+  justify-self: center;
+  align-self: end;
+  color: #56CFE0;
+}
 
 /*# sourceMappingURL=style.css.map */
